syntax = "proto3";

// If you make any changes make sure you run: make regenerate-proto

package agentcfg;

option go_package = "gitlab.com/gitlab-org/cluster-integration/gitlab-agent/pkg/agentcfg";

// CF suffix stands for Configuration File, meaning a message is part of ConfigurationFile.

// Project with Kubernetes object manifests.
message ManifestProjectCF {
    // Project id.
    // e.g. gitlab-org/cluster-integration/gitlab-agent
    string id = 1 [json_name = "id"];

    // TODO support fetching a path (subdirectory) within a repository
}

message DeploymentsCF {
    repeated ManifestProjectCF manifest_projects = 1 [json_name = "manifest_projects"];
}

// ConfigurationFile represents user-facing configuration file.
message ConfigurationFile {
    DeploymentsCF deployments = 1 [json_name = "deployments"];
}
